# lifeos

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx.frontend.conf  pyproject.toml
backend/: README.md  analytics.py  analytics_db.py  analytics_models.py  analytics_router.py  config.py  db.py  lifeos_router.py  lifeos_schemas.py  llm_router.py  main.py  models.py  recurrence_router.py  router.py  schedule_router.py  schemas.py
backend/integrations/: TODO.txt  merge.py  primitives.py  router.py  schemas.py  utils.py
backend/integrations/google_calendar/: __init__.py  adapter.py  client.py  translations.py
backend/llm/: gemini.py
core/: README.md  blob.py  constants.py  daytime.py  recurrence.py  utils.py
docs/: README.md  lifeos-architecture.md
electron/: README.md  main.js
engine/: README.md
engine/src/: constants.hpp  engine.cpp  engine.hpp  interval.hpp  interval_tree.hpp  job.cpp  job.hpp  optimizer.hpp  policy.hpp  pybind_engine.cpp  tag.hpp  types.hpp
engine/tests/: tests.cpp
frontend/: README.md  index.html
frontend/css/: lifeos.css  styles.css
frontend/js/: actions.js  api.js  app.js  constants.js  core.js  dom.js  forms.js  history.js  integrations.js  lifeos.js  popups.js  render.js  utils.js
landing/: README.md
learning/: README.md
mcp/: README.md
tests/: README.md  test_api.py  test_cost_function.py  test_engine.py  test_integrations_google_translations.py  test_integrations_merge.py  test_integrations_sync_colors.py  test_lifeos_api.py  test_llm_router.py  test_schedule_router.py  test_schedule_workflow.py
